@@ -6,5 +6,7 @@ includedir=@includedir@
 Name: Xdamage
 Description: X Damage  Library
 Version: @PACKAGE_VERSION@
-Cflags: -I${includedir} @XDAMAGE_CFLAGS@ @X_CFLAGS@
-Libs: -L${libdir} -lXdamage @XDAMAGE_LIBS@ @X_LIBS@
+Requires: xproto damageproto >= @DAMAGEEXT_VERSION@ xfixes
+Requires.private: x11 xfixes
+Cflags: -I${includedir}
+Libs: -L${libdir} -lXdamage
